Fixed Status Code use in existing tests

--- a/community/bolt/src/docs/dev/examples.asciidoc
+++ b/community/bolt/src/docs/dev/examples.asciidoc
@@ -162,23 +162,22 @@ Client: RUN "This will cause a syntax error" {}
 
 
 # Server responds with failure
-Server: FAILURE { "code": "Neo.ClientError.Statement.InvalidSyntax",
+Server: FAILURE { "code": "Neo.ClientError.Statement.SyntaxError",
                   "message": "Invalid input 'T': expected <init> (line 1, column 1 (offset: 0))
                           "This will cause a syntax error"
                            ^"}
 
-  00 a0 b1 7f  a2 84 63 6f  64 65 d0 27  4e 65 6f 2e
-  43 6c 69 65  6e 74 45 72  72 6f 72 2e  53 74 61 74
-  65 6d 65 6e  74 2e 49 6e  76 61 6c 69  64 53 79 6e
-  74 61 78 87  6d 65 73 73  61 67 65 d0  65 49 6e 76
-  61 6c 69 64  20 69 6e 70  75 74 20 27  54 27 3a 20
-  65 78 70 65  63 74 65 64  20 3c 69 6e  69 74 3e 20
-  28 6c 69 6e  65 20 31 2c  20 63 6f 6c  75 6d 6e 20
-  31 20 28 6f  66 66 73 65  74 3a 20 30  29 29 0a 22
-  54 68 69 73  20 77 69 6c  6c 20 63 61  75 73 65 20
-  61 20 73 79  6e 74 61 78  20 65 72 72  6f 72 22 0a
-  20 5e 00 00
-
+  00 9E B1 7F  A2 84 63 6F  64 65 D0 25  4E 65 6F 2E
+  43 6C 69 65  6E 74 45 72  72 6F 72 2E  53 74 61 74
+  65 6D 65 6E  74 2E 53 79  6E 74 61 78  45 72 72 6F
+  72 87 6D 65  73 73 61 67  65 D0 65 49  6E 76 61 6C
+  69 64 20 69  6E 70 75 74  20 27 54 27  3A 20 65 78
+  70 65 63 74  65 64 20 3C  69 6E 69 74  3E 20 28 6C
+  69 6E 65 20  31 2C 20 63  6F 6C 75 6D  6E 20 31 20
+  28 6F 66 66  73 65 74 3A  20 30 29 29  0A 22 54 68
+  69 73 20 77  69 6C 6C 20  63 61 75 73  65 20 61 20
+  73 79 6E 74  61 78 20 65  72 72 6F 72  22 0A 20 5E
+  00 00
 
 # Further requests are ignored
 Client: PULL_ALL
@@ -534,14 +533,15 @@ Server: SUCCESS {
           },
           "notifications": [{
             "title": "This query builds a cartesian product between disconnected patterns.",
-            "code": "Neo.ClientNotification.Statement.CartesianProduct",
+            "code": "Neo.ClientNotification.Statement.CartesianProductWarning",
             "description": "If a part of a query contains multiple disconnected patterns, this will build a cartesian product between all those parts. This may produce a large amount of data and slow down query processing. While occasionally intended, it may often be possible to reformulate the query that avoids the use of this cross product, perhaps by adding a relationship between the different parts or by using OPTIONAL MATCH (identifier is: (m))",
             "position": {
               "offset": 0, "column": 1, "line": 1
             }
           }]
         }
-  04 36 B1 70  A3 84 74 79  70 65 81 72  84 70 6C 61
+
+  04 3D B1 70  A3 84 74 79  70 65 81 72  84 70 6C 61
   6E A4 84 61  72 67 73 A7  8C 72 75 6E  74 69 6D 65
   2D 69 6D 70  6C 8B 49 4E  54 45 52 50  52 45 54 45
   44 8C 70 6C  61 6E 6E 65  72 2D 69 6D  70 6C 83 49
@@ -575,40 +575,41 @@ Server: SUCCESS {
   75 69 6C 64  73 20 61 20  63 61 72 74  65 73 69 61
   6E 20 70 72  6F 64 75 63  74 20 62 65  74 77 65 65
   6E 20 64 69  73 63 6F 6E  6E 65 63 74  65 64 20 70
-  61 74 74 65  72 6E 73 2E  84 63 6F 64  65 D0 31 4E
+  61 74 74 65  72 6E 73 2E  84 63 6F 64  65 D0 38 4E
   65 6F 2E 43  6C 69 65 6E  74 4E 6F 74  69 66 69 63
   61 74 69 6F  6E 2E 53 74  61 74 65 6D  65 6E 74 2E
   43 61 72 74  65 73 69 61  6E 50 72 6F  64 75 63 74
-  8B 64 65 73  63 72 69 70  74 69 6F 6E  D1 01 A9 49
-  66 20 61 20  70 61 72 74  20 6F 66 20  61 20 71 75
-  65 72 79 20  63 6F 6E 74  61 69 6E 73  20 6D 75 6C
-  74 69 70 6C  65 20 64 69  73 63 6F 6E  6E 65 63 74
-  65 64 20 70  61 74 74 65  72 6E 73 2C  20 74 68 69
-  73 20 77 69  6C 6C 20 62  75 69 6C 64  20 61 20 63
-  61 72 74 65  73 69 61 6E  20 70 72 6F  64 75 63 74
-  20 62 65 74  77 65 65 6E  20 61 6C 6C  20 74 68 6F
-  73 65 20 70  61 72 74 73  2E 20 54 68  69 73 20 6D
-  61 79 20 70  72 6F 64 75  63 65 20 61  20 6C 61 72
-  67 65 20 61  6D 6F 75 6E  74 20 6F 66  20 64 61 74
-  61 20 61 6E  64 20 73 6C  6F 77 20 64  6F 77 6E 20
-  71 75 65 72  79 20 70 72  6F 63 65 73  73 69 6E 67
-  2E 20 57 68  69 6C 65 20  6F 63 63 61  73 69 6F 6E
-  61 6C 6C 79  20 69 6E 74  65 6E 64 65  64 2C 20 69
-  74 20 6D 61  79 20 6F 66  74 65 6E 20  62 65 20 70
-  6F 73 73 69  62 6C 65 20  74 6F 20 72  65 66 6F 72
-  6D 75 6C 61  74 65 20 74  68 65 20 71  75 65 72 79
-  20 74 68 61  74 20 61 76  6F 69 64 73  20 74 68 65
-  20 75 73 65  20 6F 66 20  74 68 69 73  20 63 72 6F
-  73 73 20 70  72 6F 64 75  63 74 2C 20  70 65 72 68
-  61 70 73 20  62 79 20 61  64 64 69 6E  67 20 61 20
-  72 65 6C 61  74 69 6F 6E  73 68 69 70  20 62 65 74
-  77 65 65 6E  20 74 68 65  20 64 69 66  66 65 72 65
-  6E 74 20 70  61 72 74 73  20 6F 72 20  62 79 20 75
-  73 69 6E 67  20 4F 50 54  49 4F 4E 41  4C 20 4D 41
-  54 43 48 20  28 69 64 65  6E 74 69 66  69 65 72 20
-  69 73 3A 20  28 6D 29 29  88 70 6F 73  69 74 69 6F
-  6E A3 86 6F  66 66 73 65  74 00 86 63  6F 6C 75 6D
-  6E 01 84 6C  69 6E 65 01  00 00
+  57 61 72 6E  69 6E 67 8B  64 65 73 63  72 69 70 74
+  69 6F 6E D1  01 A9 49 66  20 61 20 70  61 72 74 20
+  6F 66 20 61  20 71 75 65  72 79 20 63  6F 6E 74 61
+  69 6E 73 20  6D 75 6C 74  69 70 6C 65  20 64 69 73
+  63 6F 6E 6E  65 63 74 65  64 20 70 61  74 74 65 72
+  6E 73 2C 20  74 68 69 73  20 77 69 6C  6C 20 62 75
+  69 6C 64 20  61 20 63 61  72 74 65 73  69 61 6E 20
+  70 72 6F 64  75 63 74 20  62 65 74 77  65 65 6E 20
+  61 6C 6C 20  74 68 6F 73  65 20 70 61  72 74 73 2E
+  20 54 68 69  73 20 6D 61  79 20 70 72  6F 64 75 63
+  65 20 61 20  6C 61 72 67  65 20 61 6D  6F 75 6E 74
+  20 6F 66 20  64 61 74 61  20 61 6E 64  20 73 6C 6F
+  77 20 64 6F  77 6E 20 71  75 65 72 79  20 70 72 6F
+  63 65 73 73  69 6E 67 2E  20 57 68 69  6C 65 20 6F
+  63 63 61 73  69 6F 6E 61  6C 6C 79 20  69 6E 74 65
+  6E 64 65 64  2C 20 69 74  20 6D 61 79  20 6F 66 74
+  65 6E 20 62  65 20 70 6F  73 73 69 62  6C 65 20 74
+  6F 20 72 65  66 6F 72 6D  75 6C 61 74  65 20 74 68
+  65 20 71 75  65 72 79 20  74 68 61 74  20 61 76 6F
+  69 64 73 20  74 68 65 20  75 73 65 20  6F 66 20 74
+  68 69 73 20  63 72 6F 73  73 20 70 72  6F 64 75 63
+  74 2C 20 70  65 72 68 61  70 73 20 62  79 20 61 64
+  64 69 6E 67  20 61 20 72  65 6C 61 74  69 6F 6E 73
+  68 69 70 20  62 65 74 77  65 65 6E 20  74 68 65 20
+  64 69 66 66  65 72 65 6E  74 20 70 61  72 74 73 20
+  6F 72 20 62  79 20 75 73  69 6E 67 20  4F 50 54 49
+  4F 4E 41 4C  20 4D 41 54  43 48 20 28  69 64 65 6E
+  74 69 66 69  65 72 20 69  73 3A 20 28  6D 29 29 88
+  70 6F 73 69  74 69 6F 6E  A3 86 6F 66  66 73 65 74
+  00 86 63 6F  6C 75 6D 6E  01 84 6C 69  6E 65 01 00
+  00
 ----
 
 === Resetting the session
