Minor docs rewording for file locations

--- a/manual/contents/src/operations/installation-deployment/file-locations.asciidoc
+++ b/manual/contents/src/operations/installation-deployment/file-locations.asciidoc
@@ -2,7 +2,7 @@
 = File Locations
 
 This table shows where important files can be found by default in various Neo4j distribution packages.
-Many of these paths are configurable; see <<configuration-settings>> for details.
+Some of these paths are configurable; see <<configuration-settings>> for details.
 
 [options="header"]
 |===
@@ -14,4 +14,4 @@ Many of these paths are configurable; see <<configuration-settings>> for details
 |OS X desktop          |_$\{HOME\}/Documents/Neo4j/neo4j.conf_         |_$\{HOME\}/Documents/Neo4j_
 |===
 
-Please note that the structure directories and files in the data directory is internal to Neo4j and subject to change between versions without notice.
+Please note that the data directory is internal to Neo4j and its structure subject to change between versions without notice.
