--- a/manual/server-examples/src/docs/dev/server-java-rest-client.asciidoc
+++ b/manual/server-examples/src/docs/dev/server-java-rest-client.asciidoc
@@ -27,7 +27,7 @@ classifier=sources
 If the status of the response is +200 OK+, then we know the server is running fine and we can continue.
 If the code fails to connect to the server, then please have a look at <<operations>>.
 
-NOTE: If you get any other response than +200 OK+ (particularly +4xx+ or +5xx+ responses) then please check your configuration and look in the log files in the 'data/log' directory.
+NOTE: If you get any other response than +200 OK+ (particularly +4xx+ or +5xx+ responses) then please check your configuration and look in the log files in the logs directory.
 
 == Sending Cypher ==
 
