--- a/manual/embedded-examples/src/docs/dev/index.asciidoc
+++ b/manual/embedded-examples/src/docs/dev/index.asciidoc
@@ -77,4 +77,8 @@ include::unique-nodes.asciidoc[]
 
 :leveloffset: 2
 
+include::bolt.asciidoc[]
+
+:leveloffset: 2
+
 include::terminate-tx.asciidoc[]
