(DOCS) Update documentation with simplified powershell scripts
This commit updates the Neo4j documentation for the simplified powershell
scripts which were introduced in https://github.com/neo4j/neo4j/commit/fd6351310feabd9682742a3974938ad5c1738c1c

- The Windows batch files were created to be almost mirrors of the linux
  management scripts, unifying the administrative experience.
- Removed noticed about bat file deprectation
- Help text is valid for both Linux and Windows, and links modified for

--- a/community/import-tool/src/docs/ops/import-tool.asciidoc
+++ b/community/import-tool/src/docs/ops/import-tool.asciidoc
@@ -91,7 +91,9 @@ Under Unix/Linux/OSX, the command is named `neo4j-import`. Depending on the inst
 
 === Windows
 
-For help with running the import tool using Windows PowerShell, see <<powershell>>.
+Under Windows, used by executing `bin\neo4j-import` from inside the installation directory.
+
+For help with running the import tool under Windows, see the reference in <<powershell-windows,Windows>>.
 
 [[import-tool-options]]
 === Options
