--- a/community/shell/src/docs/dev/shell.asciidoc
+++ b/community/shell/src/docs/dev/shell.asciidoc
@@ -13,12 +13,17 @@ This guide will show you how to get it going!
 
 When used together with a Neo4j server, simply issue the following at the command line:
 
+.Linux
 [source,shell]
 ----
 ./bin/neo4j-shell
 ----
 
-For help with running shell using Windows PowerShell, see <<powershell>>.
+.Windows
+[source,powershell]
+----
+bin/neo4j-shell
+----
 
 For the full list of options, see the reference in the <<shell-manpage,Shell manual page>>.
 
@@ -26,6 +31,8 @@ To connect to a running Neo4j database, use <<read-only-mode>> for local databas
 and see <<shell-enabling-remote>> for remote databases.
 
 You need to make sure that the shell jar file is on the classpath when you start up your Neo4j instance.
+
+For help with running shell using Windows, see the reference in <<powershell-windows,Windows>>.
 
 [[shell-enabling-remote]]
 === Enabling the shell server
