--- a/community/bolt/src/docs/dev/messaging.asciidoc
+++ b/community/bolt/src/docs/dev/messaging.asciidoc
@@ -110,41 +110,6 @@ B1 01 8C 4D  79 43 6C 69  65 6E 74 2F  31 2E 30 A3
 |authToken   |An authorization token used to authenticate to the database. The token must contain the keys `scheme`, `principal`, and `credentials`. Example { "scheme": "basic", "principal": "neo4j", "credentials": "secret"}"
 |=======================
 
-[[bolt-message-structs-reset]]
-==== RESET
-
-The `RESET` message is a client message used to return the current session to a "clean" state.
-It will cause the session to `IGNORE` any message it is currently processing, as well as any message before `RESET` that had not yet begun processing.
-This allows `RESET` to abort long-running operations.
-It also means clients must be careful about pipelining `RESET`.
-Only send this if you are not currently waiting for a result from a prior message, or if you want to explicitly abort any prior message.
-
-The following actions are performed by `RESET`:
-
-- force any currently processing message to abort with `IGNORE`
-- force any pending messages that have not yet started processing to be `IGNORED`
-- clear any outstanding `FAILURE` state
-- dispose of any outstanding result records
-- rollback the current transaction (if any)
-
-[source,bolt_message_struct]
-----
-ResetMessage (signature=0x0F) {
-}
-----
-
-.Response
-- `SUCCESS {}` if the session was successfully reset
-- `FAILURE {"code": ..., "message": ...}` if a reset is not currently possible
-
-.Example
-[source,bolt_packstream_type]
-----
-Value: RESET
-
-B0 0F
-----
-
 [[bolt-message-structs-run]]
 ==== RUN
 
@@ -239,6 +204,80 @@ If an unacknowledged failure is pending from a previous exchange, the server wil
 Value: PULL_ALL
 
 B0 3F
+----
+
+[[bolt-message-structs-reset]]
+==== RESET
+
+The `RESET` message is a client message used to return the current session to a "clean" state.
+It will cause the session to `IGNORE` any message it is currently processing, as well as any message before `RESET` that had not yet begun processing.
+This allows `RESET` to abort long-running operations.
+It also means clients must be careful about pipelining `RESET`.
+Only send this if you are not currently waiting for a result from a prior message, or if you want to explicitly abort any prior message.
+
+The following actions are performed by `RESET`:
+
+- force any currently processing message to abort with `IGNORE`
+- force any pending messages that have not yet started processing to be `IGNORED`
+- clear any outstanding `FAILURE` state
+- dispose of any outstanding result records
+- rollback the current transaction (if any)
+
+See <<bolt-examples-reset>> for example usage.
+
+Also, see <<bolt-message-structs-ack-failure>> for a message that only clears `FAILURE` state
+
+
+[source,bolt_message_struct]
+----
+ResetMessage (signature=0x0F) {
+}
+----
+
+.Response
+- `SUCCESS {}` if the session was successfully reset
+- `FAILURE {"code": ..., "message": ...}` if a reset is not currently possible
+
+.Example
+[source,bolt_packstream_type]
+----
+Value: RESET
+
+B0 0F
+----
+
+[[bolt-message-structs-ack-failure]]
+==== ACK_FAILURE
+
+The `ACK_FAILURE` message is a client message used to acknowledge a failure the server has sent.
+It is similar to `RESET`, but it does not roll back open transactions, nor does it interrupt running operations.
+
+This can be a better option than `RESET` in cases where a client wants to explicitly call "ROLLBACK" in case of failure.
+A good example of this is in a shell environment, where an error should cause all subsequent statements to fail until the transaction is rolled back.
+
+The following actions are performed by `ACK_FAILURE`:
+
+- clear any outstanding `FAILURE` state
+- dispose of any outstanding result records
+
+See <<bolt-examples-ack-failure>> for an example.
+
+[source,bolt_message_struct]
+----
+AckFailureMessage (signature=0x0E) {
+}
+----
+
+.Response
+- `SUCCESS {}` if the session was successfully reset
+- `FAILURE {"code": ..., "message": ...}` if a reset is not currently possible
+
+.Example
+[source,bolt_packstream_type]
+----
+Value: ACK_FAILURE
+
+B0 0E
 ----
 
 ==== RECORD
