--- a/manual/contents/src/operations/installation-deployment/file-locations.asciidoc
+++ b/manual/contents/src/operations/installation-deployment/file-locations.asciidoc
@@ -6,12 +6,12 @@ Some of these paths are configurable; see <<configuration-settings>> for details
 
 [options="header"]
 |===
-|Package               |Configuration                                  |Data                                |Logs
-|Linux or OS X tarball |_<neo4j-root>/conf/neo4j.conf_                 |_<neo4j-root>/data_                 |_<neo4j-root>/logs_
-|Windows zip           |_<neo4j-root>\conf\neo4j.conf_                 |_<neo4j-root>\data_                 |_<neo4j-root>\logs_
-|Debian/Ubuntu .deb    |_/etc/neo4j/neo4j.conf_                        |_/var/lib/neo4j_                    |_/var/log/neo4j_
-|Windows desktop       |_%APPDATA%\Neo4j Community Edition\neo4j.conf_ |_%APPDATA%\Neo4j Community Edition_ |_%APPDATA%\Neo4j Community Edition\logs_
-|OS X desktop          |_$\{HOME\}/Documents/Neo4j/neo4j.conf_         |_$\{HOME\}/Documents/Neo4j_         |_$\{HOME\}/Documents/Neo4j/logs_
+|Package               |Configuration                                  |Data                                |Logs                                     |Metrics                                     |Import
+|Linux or OS X tarball |_<neo4j-root>/conf/neo4j.conf_                 |_<neo4j-root>/data_                 |_<neo4j-root>/logs_                      |_<neo4j-root>/metrics_                      |_<neo4j-root>/import_
+|Windows zip           |_<neo4j-root>\conf\neo4j.conf_                 |_<neo4j-root>\data_                 |_<neo4j-root>\logs_                      |_<neo4j-root>\metrics_                      |_<neo4j-root>\import_
+|Debian/Ubuntu .deb    |_/etc/neo4j/neo4j.conf_                        |_/var/lib/neo4j/data_               |_/var/log/neo4j_                         |_/var/lib/neo4j/metrics_                    |_/var/lib/neo4j/import_
+|Windows desktop       |_%APPDATA%\Neo4j Community Edition\neo4j.conf_ |_%APPDATA%\Neo4j Community Edition_ |_%APPDATA%\Neo4j Community Edition\logs_ |_%APPDATA%\Neo4j Community Edition\metrics_ |_%APPDATA%\Neo4j Community Edition\import_
+|OS X desktop          |_$\{HOME\}/Documents/Neo4j/neo4j.conf_         |_$\{HOME\}/Documents/Neo4j_         |_$\{HOME\}/Documents/Neo4j/logs_         |_$\{HOME\}/Documents/Neo4j/metrics_         |_$\{HOME\}/Documents/Neo4j/import_
 |===
 
 Please note that the data directory is internal to Neo4j and its structure subject to change between versions without notice.
