--- a/RepositoryOverview.asciidoc
+++ b/RepositoryOverview.asciidoc
@@ -199,7 +199,7 @@ More information about the maven conventions can be found http://maven.apache.or
 
 Finally, each module can have documentation.
 This documentation is located in the `src/docs` folder,
-which is organized as described http://neo4j.com/docs/milestone/community-docs.html#_file_structure_in_emphasis_docs_jar_emphasis[here].
+which is organized as described http://neo4j.com/docs/milestone/resources.html[here].
 These documentation files can be incorporated into http://neo4j.com/docs/milestone/index.html[the manual]
 by including them in the neo4j-manual component.
 
