--- a/manual/contents/src/operations/installation-deployment/file-locations.asciidoc
+++ b/manual/contents/src/operations/installation-deployment/file-locations.asciidoc
@@ -2,19 +2,19 @@
 = File Locations
 
 This table shows where important files can be found by default in various Neo4j distribution packages.
-Some of these paths are configurable; see <<configuration-settings>> for details.
 
 [options="header"]
 |===
-|Package               |Configuration                                  |Data                                |Logs                                     |Metrics                                     |Import
-|Linux or OS X tarball |_<neo4j-root>/conf/neo4j.conf_                 |_<neo4j-root>/data_                 |_<neo4j-root>/logs_                      |_<neo4j-root>/metrics_                      |_<neo4j-root>/import_
-|Windows zip           |_<neo4j-root>\conf\neo4j.conf_                 |_<neo4j-root>\data_                 |_<neo4j-root>\logs_                      |_<neo4j-root>\metrics_                      |_<neo4j-root>\import_
-|Debian/Ubuntu .deb    |_/etc/neo4j/neo4j.conf_                        |_/var/lib/neo4j/data_               |_/var/log/neo4j_                         |_/var/lib/neo4j/metrics_                    |_/var/lib/neo4j/import_
-|Windows desktop       |_%APPDATA%\Neo4j Community Edition\neo4j.conf_ |_%APPDATA%\Neo4j Community Edition_ |_%APPDATA%\Neo4j Community Edition\logs_ |_%APPDATA%\Neo4j Community Edition\metrics_ |_%APPDATA%\Neo4j Community Edition\import_
-|OS X desktop          |_$\{HOME\}/Documents/Neo4j/neo4j.conf_         |_$\{HOME\}/Documents/Neo4j_         |_$\{HOME\}/Documents/Neo4j/logs_         |_$\{HOME\}/Documents/Neo4j/metrics_         |_$\{HOME\}/Documents/Neo4j/import_
+|Package               |Configuration                                  |Data                                |Logs                                     |Metrics                                     |Import                                     |Bin
+|Linux or OS X tarball |_<neo4j-root>/conf/neo4j.conf_                 |_<neo4j-root>/data_                 |_<neo4j-root>/logs_                      |_<neo4j-root>/metrics_                      |_<neo4j-root>/import_                      |_<neo4j-root>/bin_
+|Windows zip           |_<neo4j-root>\conf\neo4j.conf_                 |_<neo4j-root>\data_                 |_<neo4j-root>\logs_                      |_<neo4j-root>\metrics_                      |_<neo4j-root>\import_                      |_<neo4j-root>\bin_
+|Debian/Ubuntu .deb    |_/etc/neo4j/neo4j.conf_                        |_/var/lib/neo4j/data_               |_/var/log/neo4j_                         |_/var/lib/neo4j/metrics_                    |_/var/lib/neo4j/import_                    |_/var/lib/neo4j/bin_
+|Windows desktop       |_%APPDATA%\Neo4j Community Edition\neo4j.conf_ |_%APPDATA%\Neo4j Community Edition_ |_%APPDATA%\Neo4j Community Edition\logs_ |_%APPDATA%\Neo4j Community Edition\metrics_ |_%APPDATA%\Neo4j Community Edition\import_ |_%ProgramFiles%\Neo4j CE {neo4j-version}\bin_
+|OS X desktop          |_$\{HOME\}/Documents/Neo4j/neo4j.conf_         |_$\{HOME\}/Documents/Neo4j_         |_$\{HOME\}/Documents/Neo4j/logs_         |_$\{HOME\}/Documents/Neo4j/metrics_         |_$\{HOME\}/Documents/Neo4j/import_         |(in App)
 |===
 
 Please note that the data directory is internal to Neo4j and its structure subject to change between versions without notice.
+
 == Log Files
 
 [options="header"]
@@ -25,4 +25,18 @@ Please note that the data directory is internal to Neo4j and its structure subje
 |_http.log_  |Request log for the HTTP API.
 |_gc.log_    |Garbage Collection logging provided by the JVM.
 |_query.log_ |Log of executed queries that takes longer than a specified threshold. (Enterprise only.)
+|===
+
+== Configuration
+
+Some of these paths are configurable with `dbms.directories.*` settings; see <<configuration-settings>> for details.
+
+The locations of _<neo4j-root>_, _bin_ and _conf_ can be configured using environment variables.
+
+[options="header"]
+|===
+|Location       |Default                                   |Environment variable |Notes
+|_<neo4j-root>_ |parent of _bin_                           |`NEO4J_ROOT`         |Must be set explicitly if _bin_ is not a subdirectory.
+|_bin_          |directory where _neo4j_ script is located |`NEO4J_BIN`          |Must be set explicitly if _neo4j_ script is invoked as a symlink.
+|_conf_         |_<neo4j-root>/conf                        |`NEO4J_CONF`         |Must be set explicitly if it is not a subdirectory of _<neo4j-root>_.
 |===
